# serializer version: 1
# name: TestCreateOTU.test_empty_success
  dict({
    'acronym': '',
    'excluded_accessions': list([
    ]),
    'legacy_id': None,
    'name': 'Cabbage leaf curl Jamaica virus',
    'schema': dict({
      'molecule': dict({
        'strandedness': 'double',
        'topology': 'circular',
        'type': 'DNA',
      }),
      'multipartite': True,
      'segments': list([
        dict({
          'length': 2575,
          'name': 'DNA-A',
          'required': True,
        }),
        dict({
          'length': 2494,
          'name': 'DNA-B',
          'required': True,
        }),
      ]),
    }),
    'taxid': 345184,
  })
# ---
# name: TestCreateOTUCommands.test_autofill_ok
  OTUSchema(molecule=Molecule(strandedness='double', topology='circular', type='DNA'), segments=[Segment(name='DNA-A', required=True, length=2575), Segment(name='DNA-B', required=True, length=2494)], multipartite=True)
# ---
# name: TestCreateOTUCommands.test_ok[1278205-accessions0]
  dict({
    'acronym': '',
    'excluded_accessions': list([
    ]),
    'legacy_id': None,
    'name': 'Dahlia latent viroid',
    'schema': dict({
      'molecule': dict({
        'strandedness': 'single',
        'topology': 'linear',
        'type': 'RNA',
      }),
      'multipartite': False,
      'segments': list([
        dict({
          'length': 342,
          'name': 'Dahlia latent viroid',
          'required': True,
        }),
      ]),
    }),
    'taxid': 1278205,
  })
# ---
# name: TestCreateOTUCommands.test_ok[345184-accessions1]
  dict({
    'acronym': '',
    'excluded_accessions': list([
    ]),
    'legacy_id': None,
    'name': 'Cabbage leaf curl Jamaica virus',
    'schema': dict({
      'molecule': dict({
        'strandedness': 'double',
        'topology': 'circular',
        'type': 'DNA',
      }),
      'multipartite': True,
      'segments': list([
        dict({
          'length': 2575,
          'name': 'DNA-A',
          'required': True,
        }),
        dict({
          'length': 2494,
          'name': 'DNA-B',
          'required': True,
        }),
      ]),
    }),
    'taxid': 345184,
  })
# ---
# name: TestUpdateOTU.test_without_exclusions_ok
  list([
    dict({
      'acronym': '',
      'excluded_accessions': list([
      ]),
      'legacy_id': None,
      'name': 'Cabbage leaf curl Jamaica virus',
      'schema': dict({
        'molecule': dict({
          'strandedness': 'double',
          'topology': 'circular',
          'type': 'DNA',
        }),
        'multipartite': True,
        'segments': list([
          dict({
            'length': 2575,
            'name': 'DNA-A',
            'required': True,
          }),
          dict({
            'length': 2494,
            'name': 'DNA-B',
            'required': True,
          }),
        ]),
      }),
      'taxid': 345184,
    }),
  ])
# ---
